fix bug and style

--- a/internal/webfs/web/index.html
+++ b/internal/webfs/web/index.html
@@ -698,7 +698,9 @@ claude --version</code></pre>
                             <div class="code-block">
                                 <div class="code-header">
                                     <span data-i18n="help.usage_commands">使用命令</span>
-                                    <button class="copy-btn" data-copy="" id="usageCommandsCopy">
+                                    <button class="copy-btn" data-copy="export ANTHROPIC_AUTH_TOKEN=sk-... 
+export ANTHROPIC_BASE_URL=https://anyrouter.top
+claude" id="usageCommandsCopy">
                                         <svg viewBox="0 0 24 24" width="16" height="16">
                                             <path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z" fill="currentColor"/>
                                         </svg>
@@ -732,7 +734,12 @@ claude</code></pre>
                             <div class="code-block">
                                 <div class="code-header">
                                     <span data-i18n="help.env_config">环境变量配置</span>
-                                    <button class="copy-btn" data-copy="" id="envCommandsCopy">
+                                    <button class="copy-btn" data-copy="echo -e '\n export ANTHROPIC_AUTH_TOKEN=sk-...' >> ~/.bash_profile
+echo -e '\n export ANTHROPIC_BASE_URL=https://anyrouter.top' >> ~/.bash_profile
+echo -e '\n export ANTHROPIC_AUTH_TOKEN=sk-...' >> ~/.bashrc
+echo -e '\n export ANTHROPIC_BASE_URL=https://anyrouter.top' >> ~/.bashrc
+echo -e '\n export ANTHROPIC_AUTH_TOKEN=sk-...' >> ~/.zshrc
+echo -e '\n export ANTHROPIC_BASE_URL=https://anyrouter.top' >> ~/.zshrc" id="envCommandsCopy">
                                         <svg viewBox="0 0 24 24" width="16" height="16">
                                             <path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z" fill="currentColor"/>
                                         </svg>
